--- a/.gitignore
+++ b/.gitignore
@@ -101,3 +101,11 @@ ENV/
 .mypy_cache/
 
 RUNS/
+.idea
+harder_challenge_video.mp4
+challenge_video.mp4
+myfcnn.pb
+output.png
+vgg/saved_model.pb
+test.png
+project_video.mp4
